--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  margin: 0;
+  margin: 10;
   padding: 0;
   font-size: 10px;
 }
@@ -181,6 +181,7 @@ nav {
 .plan-description {
   height: 70rem;
   margin-top: 4rem;
+  font-weight: bold;
 
 }
 
